maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:19: error: not found: value estfFaceMur
  else if(!estfFaceMur()){
           ^